--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ julia = "≥ 0.7 1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 
 [targets]
-test = ["Test"]
+test = ["Test", "MKL"]
