--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "benchmark-results"]
-	path = benchmark-results
-	url = C:/Users/yahyaaba/Documents/GitHub/AcuteBenchmark-Results
+[submodule "benchmark-result"]
+	path = benchmark-result
+	url = git@github.com:aminya/AcuteBenchmark-Results.git
