--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - dev
   pull_request:
     
 jobs:
@@ -18,45 +19,10 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-#           - windows-latest
+          - windows-latest
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@latest
-        with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
-      - run: julia --color=yes --project -e 'using Pkg; Pkg.add(PackageSpec(url=\"https://github.com/JuliaComputing/MKL.jl\")); Pkg.instantiate()'
-        if: matrix.os == 'windows-latest'
-      - run: julia --color=yes --project -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaComputing/MKL.jl")); Pkg.instantiate()'
-        if: matrix.os != 'windows-latest'
-      - uses: julia-actions/julia-buildpkg@latest
-      - uses: julia-actions/julia-runtest@latest
-
-  testAptMKL:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        version:
-          - '1.0'
-          - '1.3'
-        os:
-          - ubuntu-latest
-        arch:
-          - x64
-    env: 
-        LD_LIBRARY_PATH: /opt/intel/compilers_and_libraries_2019.4.243/linux/mkl/lib/intel64_lin/
-    steps:
-      - name: Install MKL via apt
-        run: |
-          curl https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB > GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
-          sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
-          rm GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
-          sudo sh -c 'echo deb https://apt.repos.intel.com/mkl all main > /etc/apt/sources.list.d/intel-mkl.list'
-          sudo apt-get update
-          sudo apt-get install -y intel-mkl-64bit-2019.4-070
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
         with:
@@ -64,3 +30,34 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
+
+  # testAptMKL:
+  #   name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     matrix:
+  #       version:
+  #         - '1.0'
+  #         - '1.3'
+  #       os:
+  #         - ubuntu-latest
+  #       arch:
+  #         - x64
+  #   env: 
+  #       LD_LIBRARY_PATH: /opt/intel/compilers_and_libraries_2019.4.243/linux/mkl/lib/intel64_lin/
+  #   steps:
+  #     - name: Install MKL via apt
+  #       run: |
+  #         curl https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB > GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+  #         sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+  #         rm GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+  #         sudo sh -c 'echo deb https://apt.repos.intel.com/mkl all main > /etc/apt/sources.list.d/intel-mkl.list'
+  #         sudo apt-get update
+  #         sudo apt-get install -y intel-mkl-64bit-2019.4-070
+  #     - uses: actions/checkout@v2
+  #     - uses: julia-actions/setup-julia@latest
+  #       with:
+  #         version: ${{ matrix.version }}
+  #         arch: ${{ matrix.arch }}
+  #     - uses: julia-actions/julia-buildpkg@latest
+  #     - uses: julia-actions/julia-runtest@latest
