--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
+BinaryProvider = "0.5.8"
 CpuId = "0.2"
 SpecialFunctions = "0.8, 0.9, 0.10"
 julia = "0.7, 1.0"
