--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: julia 1.0/1.3
+name: julia 1.3
 on:
   push:
     branches:
@@ -13,7 +13,6 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.0'
           - '1.3'
         os:
           - ubuntu-latest
