--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,18 @@
 name = "IntelVectorMath"
 uuid = "c8ce9da6-5d36-5c03-b118-5a70151be7bc"
-version = "0.4.0"
+version = "0.4.1"
 
 [deps]
 MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 
 [compat]
 julia = "1.3"
-MKL_jll = "2020"
+MKL_jll = "2020, 2021"
+SpecialFunctions = "0.10, 1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-
 
 [targets]
 test = ["Test", "SpecialFunctions"]
