--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   pull_request:
-    
+
 jobs:
   testMKLjl:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
@@ -13,7 +13,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.6'
+          - "1.6"
+          - "1.8"
         os:
           - ubuntu-latest
           - macOS-latest
@@ -21,17 +22,17 @@ jobs:
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - name: Cache artifacts
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         env:
           cache-name: cache-artifacts
         with:
-          path: ~/.julia/artifacts 
+          path: ~/.julia/artifacts
           key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
           restore-keys: |
             ${{ runner.os }}-test-${{ env.cache-name }}-
@@ -39,34 +40,9 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
-
-  # testAptMKL:
-  #   name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     matrix:
-  #       version:
-  #         - '1.0'
-  #         - '1.3'
-  #       os:
-  #         - ubuntu-latest
-  #       arch:
-  #         - x64
-  #   env: 
-  #       LD_LIBRARY_PATH: /opt/intel/compilers_and_libraries_2019.4.243/linux/mkl/lib/intel64_lin/
-  #   steps:
-  #     - name: Install MKL via apt
-  #       run: |
-  #         curl https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB > GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
-  #         sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
-  #         rm GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
-  #         sudo sh -c 'echo deb https://apt.repos.intel.com/mkl all main > /etc/apt/sources.list.d/intel-mkl.list'
-  #         sudo apt-get update
-  #         sudo apt-get install -y intel-mkl-64bit-2019.4-070
-  #     - uses: actions/checkout@v2
-  #     - uses: julia-actions/setup-julia@latest
-  #       with:
-  #         version: ${{ matrix.version }}
-  #         arch: ${{ matrix.arch }}
-  #     - uses: julia-actions/julia-buildpkg@latest
-  #     - uses: julia-actions/julia-runtest@latest
+      - uses: julia-actions/julia-processcoverage@v1
+      - if: matrix.version == '1.8' && matrix.os == 'ubuntu-latest'
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./lcov.info
