--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,17 +5,17 @@ on:
       - master
   pull_request:
   schedule:
-    - cron:  '1 0 1,15 * *'
-    
+    - cron: "1 0 1,15 * *"
+
 jobs:
   testMKLjl:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    name: ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         version:
-          - 'nightly'
+          - "nightly"
         os:
           - ubuntu-latest
           - macOS-latest
@@ -33,7 +33,7 @@ jobs:
         env:
           cache-name: cache-artifacts
         with:
-          path: ~/.julia/artifacts 
+          path: ~/.julia/artifacts
           key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
           restore-keys: |
             ${{ runner.os }}-test-${{ env.cache-name }}-
@@ -53,7 +53,7 @@ jobs:
   #         - ubuntu-latest
   #       arch:
   #         - x64
-  #   env: 
+  #   env:
   #       LD_LIBRARY_PATH: /opt/intel/compilers_and_libraries_2019.4.243/linux/mkl/lib/intel64_lin/
   #   steps:
   #     - name: Install MKL via apt
