--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
 name = "IntelVectorMath"
 uuid = "c8ce9da6-5d36-5c03-b118-5a70151be7bc"
-version = "0.5.2"
+version = "0.5.3"
 
 [deps]
 MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 
 [compat]
-julia = "1.3"
-MKL_jll = "2021, 2022, 2023, 2024"
+julia = "1.6"
+MKL_jll = "2022, 2023.2, 2024"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
