--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,7 @@ MKL_jll = "856f044c-d86e-5d09-b602-aeab76dc8ba7"
 
 [compat]
 julia = "1.6"
-MKL_jll = "2022, 2023.2, 2024"
+MKL_jll = "2022, 2023.2, 2024, 2025"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
