--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
   schedule:
     - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  push:
+    branches:
+      - master
 
 jobs:
   test:
