Minor CI fixes (#75)
* Re-add CI on master

* Rename workflows

* Use specific version of coveralls

* Update badges

* Add write permissions for coveralls action

* Permissions not actually needed

* Testing nightly only on ubuntu

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,29 +1,28 @@
-name: julia
+name: test-nightly
 on:
   pull_request:
   schedule:
     - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  push:
+    branches:
+      - master
 
 jobs:
   test:
-    name: ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    name: ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - "nightly"
         os:
           - ubuntu-latest
-          - macOS-latest
-          - windows-latest
         arch:
           - x64
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@latest
         with:
-          version: ${{ matrix.version }}
+          version: "nightly"
           arch: ${{ matrix.arch }}
       - name: Cache artifacts
         uses: actions/cache@v4
