--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
-name: julia
+name: test
 on:
   pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
   test:
@@ -40,7 +43,7 @@ jobs:
       - if: matrix.version == '1.10' && matrix.os == 'ubuntu-latest'
         uses: julia-actions/julia-processcoverage@v1
       - if: matrix.version == '1.10' && matrix.os == 'ubuntu-latest'
-        uses: coverallsapp/github-action@master
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ./lcov.info
